src/style/base.css
.xq-wrap {
  box-sizing: content-box;
  position: relative;
  display: block;
  container-type: inline-size;
}

/* Turn border indicator */
.xq-wrap.turn-red {
  box-shadow: 0 0 0 3px var(--piece-red, #c44);
}

.xq-wrap.turn-black {
  box-shadow: 0 0 0 3px var(--piece-black, #44c);
}

xq-container {
  position: absolute;
  width: 100%;
  height: 100%;
  display: block;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}

xq-board {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 0;
  background-size: cover;
}

.xq-wrap.manipulable xq-board {
  cursor: pointer;
}

xq-board square {
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% / 9);
  height: 10%;
  pointer-events: none;
}

xq-board square.move-dest {
  pointer-events: auto;
}

xq-board square.last-move-orig,
xq-board square.last-move-dest {
  will-change: transform;
}

.xq-wrap piece {
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% / 9);
  height: 10%;
  background-size: cover;
  z-index: 2;
  will-change: transform;
  pointer-events: none;
}

xq-board piece.dragging {
  cursor: move;
  /* !important to override z-index from 3D piece inline style */
  z-index: 11 !important;
}

piece.anim {
  z-index: 8;
}

piece.fading {
  z-index: 1;
  opacity: 0.5;
}

.xq-wrap piece.ghost {
  opacity: 0.3;
}

.xq-wrap piece svg {
  overflow: hidden;
  position: relative;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 2;
  opacity: 0.6;
}

.xq-wrap xq-auto-pieces,
.xq-wrap .xq-shapes,
.xq-wrap .xq-custom-svgs,
.xq-wrap .xq-shapes-below,
.xq-wrap .xq-custom-below {
  overflow: visible;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.xq-wrap xq-auto-pieces {
  z-index: 2;
}

.xq-wrap xq-auto-pieces piece {
  opacity: 0.3;
}

.xq-wrap .xq-shapes {
  overflow: hidden;
  opacity: 0.6;
  z-index: 2;
}

.xq-wrap .xq-shapes-below {
  overflow: hidden;
  z-index: 1;
}

.xq-wrap .xq-custom-below {
  z-index: 1;
}

.xq-wrap .xq-custom-svgs {
  /* over piece.anim = 8, but under piece.dragging = 11 */
  z-index: 9;
}

.xq-wrap .xq-custom-svgs svg,
.xq-wrap .xq-custom-below svg {
  overflow: visible;
}

.xq-wrap coords {
  position: absolute;
  display: var(--xq-coords-display, flex);
  pointer-events: none;
  opacity: 0.8;
  font-family: sans-serif;
  font-size: clamp(7px, 2.7cqw, 18px);
}

.xq-wrap coords.files {
  bottom: 0.5%;
  left: 0;
  flex-flow: row;
  align-items: center;
  width: 100%;
  height: clamp(9px, 3.6cqw, 24px);
  text-align: center;
  line-height: clamp(9px, 3.6cqw, 24px);
}

.xq-wrap coords.files.top {
  top: 0.5%;
  bottom: auto;
}

.xq-wrap coords coord {
  flex: 1 1 auto;
}

/* Interactive board square colors */
xq-board square.move-dest {
  background: radial-gradient(
    rgba(20, 85, 30, 0.5) 22%,
    #208530 0,
    rgba(0, 0, 0, 0.3) 0,
    rgba(0, 0, 0, 0) 0
  );
}

xq-board square.premove-dest {
  background: radial-gradient(
    rgba(20, 30, 85, 0.5) 22%,
    #203085 0,
    rgba(0, 0, 0, 0.3) 0,
    rgba(0, 0, 0, 0) 0
  );
}

xq-board square.oc.move-dest {
  background: radial-gradient(
    transparent 0%,
    transparent 75%,
    rgba(20, 85, 0, 0.5) 75%
  );
}

xq-board square.oc.premove-dest {
  background: radial-gradient(
    transparent 0%,
    transparent 80%,
    rgba(20, 30, 85, 0.2) 80%
  );
}

xq-board square.move-dest:hover,
xq-board square.move-dest.hover {
  background: rgba(20, 85, 30, 0.3);
}

xq-board square.premove-dest:hover,
xq-board square.premove-dest.hover {
  background: rgba(20, 30, 85, 0.2);
}

.turn-red xq-board square.last-move-orig {
  background: linear-gradient(
      var(--piece-black, #44c),
      var(--piece-black, #44c)
    )
    center / 30% 30% no-repeat;
}

.turn-black xq-board square.last-move-orig {
  background: linear-gradient(var(--piece-red, #c44), var(--piece-red, #c44))
    center / 30% 30% no-repeat;
}

.turn-red xq-board square.last-move-dest {
  /* background-color: rgba(20, 85, 30, 0.5); */
  background: radial-gradient(
    transparent 0%,
    transparent 75%,
    var(--piece-black, rgba(68, 68, 204, 0.5)) 75%
  );
}

.turn-black xq-board square.last-move-dest {
  /* background-color: rgba(20, 85, 30, 0.5); */
  background: radial-gradient(
    transparent 0%,
    transparent 75%,
    var(--piece-red, rgba(204, 68, 68, 0.5)) 75%
  );
}

xq-board square.selected {
  /* background-color: rgba(20, 85, 30, 0.5); */
  background: radial-gradient(
    transparent 0%,
    transparent 75%,
    rgba(20, 85, 0, 1) 75%
  );
}

xq-board square.check {
  background: radial-gradient(
    ellipse at center,
    rgba(255, 0, 0, 1) 0%,
    rgba(231, 0, 0, 1) 25%,
    rgba(169, 0, 0, 0) 89%,
    rgba(158, 0, 0, 0) 100%
  );
}

xq-board square.current-premove {
  background-color: rgba(20, 30, 85, 0.5);
}

/* Alternating colors in file coordinate labels */
.orientation-white .files :nth-child(even),
.orientation-black .files :nth-child(odd) {
  color: rgba(72, 72, 72, 0.8);
}

.orientation-white .files :nth-child(odd),
.orientation-black .files :nth-child(even) {
  color: rgba(255, 255, 255, 0.8);
}

